# ipmg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/ipmg/: __init__.py  __main__.py  discover.py  exceptions.py  main.py  ping.py  reporting.py
src/ipmg/cli/: commands.py  parser.py
src/ipmg/core/: discovery.py  ping.py  security.py
src/ipmg/infrastructure/: file_io.py
src/ipmg/reporting/: summary.py
src/ipmg/services/: scan_service.py
src/ipmg/utils/: __init__.py  helpers.py
tests/: test_file_io.py  test_parser.py  test_scan_service.py
