# ==========================================================
# Build System
# ==========================================================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


# ==========================================================
# Project Metadata
# ==========================================================

[project]
name = "ipmg"
version = "1.0.3"  # Managed automatically by semantic-release
description = "IP Management & Ping Monitoring CLI Tool"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Sameer Alam" }
]

keywords = ["ip", "network", "ping", "monitoring", "cli"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "pandas>=2.0",
    "tqdm>=4.65",
    "openpyxl>=3.1",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/sameeralam3127/ipmg"
Repository = "https://github.com/sameeralam3127/ipmg"
Issues = "https://github.com/sameeralam3127/ipmg/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.0",
    "ruff>=0.4",
    "pre-commit>=3.5.0",
    "python-semantic-release>=10.5.3",
]

[project.scripts]
ipmg = "ipmg.cli.commands:run"


# ==========================================================
# Development Dependencies (uv)
# ==========================================================

[dependency-groups]
dev = [
    "pytest>=7.4",
    "black>=24.0",
    "ruff>=0.4",
    "pre-commit>=3.5.0",
    "python-semantic-release>=10.5.3",
]


# ==========================================================
# Semantic Release Configuration
# ==========================================================

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/ipmg/__init__.py:__version__"]
tag_format = "v{version}"
commit_message = "chore(release): {version}"
build_command = "python -m build"
upload_to_pypi = true
upload_to_repository = "pypi"
major_on_zero = false


# ==========================================================
# Setuptools (src layout)
# ==========================================================

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


# ==========================================================
# Testing
# ==========================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


# ==========================================================
# Ruff
# ==========================================================

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["ipmg"]


# ==========================================================
# Black
# ==========================================================

[tool.black]
line-length = 100
target-version = ["py310"]
